--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -773,7 +773,7 @@ html {
 }
 
 body {
-  font-family: 'PT Serif', serif;
+  font-family: 'Lato', sans-serif;
   color: #515151;
   background-color: #fbfbfb;
   margin: 0;
@@ -1162,7 +1162,7 @@ footer .copyright {
 }
 
 .post .post-content .post-title a {
-  font-family: 'PT Serif', serif;
+  font-family: 'Lato', sans-serif;
   text-decoration: none;
   color: #263959;
 }
